@@ -62,7 +62,10 @@ Changes for v2.02
   - Incorporated protocols.ini updates
 - Fix loading KM upgrades with Manual Protocols for remotes that use 2-byte pids. (Greg)
 - Show a dialog for entering PB-/KM-/IR- formatted protocol upgrades when the "Import Protocol Upgrade" button is pressed, instead of reading directly from the clipboard. (Greg)
-- Add assembler and protocol builder facilities (Graham) 
+- Add assembler and protocol builder facilities (Graham)
+-- Alpha 12a
+- Fix two bugs preventing some protocols from loading or disassembling (Graham)
+- Enable an assembler line to be commented out by putting a semicolon at start of label field (Graham)
 
 Changes for v2.01
 -- Alpha --
